get all application
